--- a/html/header.html
+++ b/html/header.html
@@ -4,10 +4,10 @@
     <div class="header">
         <div class="left-header">
         <img id="menu" src="../Resource/Resource/img/toggle.png" alt="menu"/>
-        <img id="logo" src="/Resource/Resource/cukcuk-logo.png" alt="cukcuk-logo">
+        <img id="logo" src="../Resource/Resource/cukcuk-logo.png" alt="cukcuk-logo">
         </div>
         <div class="center-header">
-            <img id="misa" src="/Resource/Resource/img/misa.png">
+            <img id="misa" src="../Resource/Resource/img/misa.png">
             <p id="namecompany">Chi nhánh MISA miền Bắc</p>
                   <button id="customDropdown" type="button" class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     
@@ -19,9 +19,9 @@
               </div>
         </div>
         <div class="right-header">
-            <img id="avatar" src="/Resource/Resource/icon/avatar-default.png" alt="avatar">
+            <img id="avatar" src="../Resource/Resource/icon/avatar-default.png" alt="avatar">
             <span id="name">Trần Đức Long</span>
-            <img id="option" src="/Resource/Resource/icon/option.png" alt="option">
+            <img id="option" src="../Resource/Resource/icon/option.png" alt="option">
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
