--- a/html/navbar.html
+++ b/html/navbar.html
@@ -2,12 +2,12 @@
 <div class="navbar">
     <div class="navbar-list">
         <ul id="menu-list" style="list-style-type: none;">
-       <li><button class="list-button"><img class="icon-list" src="/Resource/Resource/icon/document-online.png"><span>Hồ sơ điện tử</span></button></li>
-        <li><button class="list-button"><img class="icon-list" src="/Resource/Resource/icon/document-online.png"><span>Hồ sơ giấy</span></button></li>
-        <li><button class="list-button"><img class="icon-list" src="/Resource/Resource/icon/report.png"><span>Theo dõi chi</span></button></li>
-        <li><button class="list-button"><img class="icon-list" src="/Resource/Resource/icon/dashboard.png"><span>Theo dõi đóng</span></button></li>
-        <li><button class="list-button"><img class="icon-list" src="/Resource/Resource/icon/dic-employee.png"><span>Quản lý lao động</span></button></li>
-        <li><button class="list-button"><img class="icon-list" src="/Resource/Resource/icon/setting.png"><span>Thiết lập</span></button></li>
+       <li><button class="list-button"><img class="icon-list" src="../Resource/Resource/icon/document-online.png"><span>Hồ sơ điện tử</span></button></li>
+        <li><button class="list-button"><img class="icon-list" src="../Resource/Resource/icon/document-online.png"><span>Hồ sơ giấy</span></button></li>
+        <li><button class="list-button"><img class="icon-list" src="../Resource/Resource/icon/report.png"><span>Theo dõi chi</span></button></li>
+        <li><button class="list-button"><img class="icon-list" src="../Resource/Resource/icon/dashboard.png"><span>Theo dõi đóng</span></button></li>
+        <li><button class="list-button"><img class="icon-list" src="../Resource/Resource/icon/dic-employee.png"><span>Quản lý lao động</span></button></li>
+        <li><button class="list-button"><img class="icon-list" src="../Resource/Resource/icon/setting.png"><span>Thiết lập</span></button></li>
     </ul>
     <button type="button" id="mini" onclick="ministate()">Arrow</button>
     </div>
