--- a/html/content.html
+++ b/html/content.html
@@ -6,8 +6,8 @@
           <button id="buttonadd" type="button">Thêm Nhân Viên</button>
           </div>
           <div class="finder">
-              <input type="text" id="findtext" placeholder="Mời nhập nhân viên cần tìm" onfocus="this.placeholder = ''"
-              onblur="this.placeholder = 'Mời nhập nhân viên cần tìm'">
+              <input type="text" id="findtext" placeholder="Tìm kiếm theo Mã, Tên hoặc Số điện thoại" onfocus="this.placeholder = ''"
+              onblur="this.placeholder = 'Tìm kiếm theo Mã, Tên hoặc Số điện thoại'">
           </div>
         <table class="table table-responsive w-100 d-block d-md-table">
             <thead class="thead-inverse">
