--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
             $('#content').load('content.html');
         });
     </script>
-    <title>Index</title>
+    <title>ProJect Web</title>
 </head>
 
 <body>
