--- a/html/header.html
+++ b/html/header.html
@@ -7,15 +7,14 @@
         <img id="logo" src="../Resource/Resource/cukcuk-logo.png" alt="cukcuk-logo">
         </div>
         <div class="center-header">
-            <img id="misa" src="../Resource/Resource/img/misa.png">
-            <p id="namecompany">Chi nhánh MISA miền Bắc</p>
+            <p id="namecompany">Nhà hàng Biển Đông</p>
                   <button id="customDropdown" type="button" class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     
                   </button>
                   <div class="dropdown-menu" aria-labelledby="customDropdown">
                     <span class="dropdown-menu-arrow"></span>
-                    <a class="dropdown-item" href="#" >Chi nhánh MISA miền Bắc</a>
-                    <a class="dropdown-item" href="#">Chi nhánh MISA miền Nam</a>
+                    <a class="dropdown-item" href="#" >Nhà hàng Biển Đông</a>
+                    <a class="dropdown-item" href="#">Nhà hàng Biển Tây</a>
               </div>
         </div>
         <div class="right-header">
