--- a/html/navbar.html
+++ b/html/navbar.html
@@ -1,15 +1,16 @@
 <link rel="stylesheet" href="navbar.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <div class="navbar">
     <div class="navbar-list">
         <ul id="menu-list" style="list-style-type: none;">
-       <li><button class="list-button"><img class="icon-list" src="../Resource/Resource/icon/document-online.png"><span>Hồ sơ điện tử</span></button></li>
-        <li><button class="list-button"><img class="icon-list" src="../Resource/Resource/icon/document-online.png"><span>Hồ sơ giấy</span></button></li>
-        <li><button class="list-button"><img class="icon-list" src="../Resource/Resource/icon/report.png"><span>Theo dõi chi</span></button></li>
-        <li><button class="list-button"><img class="icon-list" src="../Resource/Resource/icon/dashboard.png"><span>Theo dõi đóng</span></button></li>
-        <li><button class="list-button"><img class="icon-list" src="../Resource/Resource/icon/dic-employee.png"><span>Quản lý lao động</span></button></li>
-        <li><button class="list-button"><img class="icon-list" src="../Resource/Resource/icon/setting.png"><span>Thiết lập</span></button></li>
+       <li><button class="list-button"><img class="icon-list" src="../Resource/Resource/icon/dashboard.png"><span>Tổng quan</span></button></li>
+        <li><button class="list-button"><img class="icon-list" src="../Resource/Resource/icon/report.png"><span>Báo cáo</span></button></li>
+        <li><button class="list-button"><img class="icon-list" src="../Resource/Resource/icon/dashboard.png"><span>Mua hàng</span></button></li>
+        <li><button class="list-button"><img class="icon-list" src="../Resource/Resource/icon/dic-employee.png"><span>Danh mục nhân viên</span></button></li>
+        <li><button class="list-button"><img class="icon-list" src="../Resource/Resource/icon/dic-employee.png"><span>Danh mục khách hàng</span></button></li>
+        <li><button class="list-button"><img class="icon-list" src="../Resource/Resource/icon/setting.png"><span>Thiết lập hệ thống</span></button></li>
     </ul>
-    <button type="button" id="mini" onclick="ministate()">Arrow</button>
+    <button type="button" id="mini" onclick="ministate()"><i class="fa fa-angle-left"></i></button>
     </div>
 </div>
 <script>
