--- a/html/navbar.html
+++ b/html/navbar.html
@@ -3,22 +3,37 @@
 <div class="navbar">
     <div class="navbar-list">
         <ul id="menu-list" style="list-style-type: none;">
-       <li><button class="list-button"><img class="icon-list" src="../Resource/Resource/icon/dashboard.png"><span>Tổng quan</span></button></li>
-        <li><button class="list-button"><img class="icon-list" src="../Resource/Resource/icon/report.png"><span>Báo cáo</span></button></li>
-        <li><button class="list-button"><img class="icon-list" src="../Resource/Resource/icon/dashboard.png"><span>Mua hàng</span></button></li>
-        <li><button class="list-button"><img class="icon-list" src="../Resource/Resource/icon/dic-employee.png"><span>Danh mục nhân viên</span></button></li>
-        <li><button class="list-button"><img class="icon-list" src="../Resource/Resource/icon/dic-employee.png"><span>Danh mục khách hàng</span></button></li>
-        <li><button class="list-button"><img class="icon-list" src="../Resource/Resource/icon/setting.png"><span>Thiết lập hệ thống</span></button></li>
-    </ul>
-    <button type="button" id="mini" onclick="ministate()"><i class="fa fa-angle-left"></i></button>
+            <li><button class="list-button"><img class="icon-list"
+                        src="../Resource/Resource/icon/dashboard.png"><span>Tổng quan</span></button></li>
+            <li><button class="list-button"><img class="icon-list" src="../Resource/Resource/icon/report.png"><span>Báo
+                        cáo</span></button></li>
+            <li><button class="list-button"><img class="icon-list"
+                        src="../Resource/Resource/icon/dashboard.png"><span>Mua hàng</span></button></li>
+            <li><button class="list-button"><img class="icon-list"
+                        src="../Resource/Resource/icon/dic-employee.png"><span>Danh mục nhân viên</span></button></li>
+            <li><button class="list-button"><img class="icon-list"
+                        src="../Resource/Resource/icon/dic-employee.png"><span>Danh mục khách hàng</span></button></li>
+            <li><button class="list-button"><img class="icon-list"
+                        src="../Resource/Resource/icon/setting.png"><span>Thiết lập hệ thống</span></button></li>
+        </ul>
+        <button type="button" id="mini"><i id="icon" class="fa fa-angle-left"></i></button>
     </div>
 </div>
 <script>
-     var x = document.getElementsByClassName('list-button');
-    function ministate(){
-        for(var i =0; i<x.length; i++){
+    var x = document.getElementsByClassName('list-button');
+    function ministate() {
+        for (var i = 0; i < x.length; i++) {
             x[i].classList.toggle("minisize");
             x[i].querySelector("span").classList.toggle("hide");
         }
     }
+    function changeicon() {
+        if (document.getElementById('icon').classList.contains('fa-angle-left')){
+            $("#icon").removeClass("fa fa-angle-left").addClass("fa fa-angle-right");
+        }
+        else
+            $("#icon").removeClass("fa fa-angle-right").addClass("fa fa-angle-left");
+    }
+    document.getElementById('mini').addEventListener("click", ministate);
+    document.getElementById('mini').addEventListener("click", changeicon);
 </script>
