--- a/html/content.html
+++ b/html/content.html
@@ -1,65 +1,267 @@
-    <link rel="stylesheet" href="content.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-      <div class="content">
-          <div class="head-content">
-          <p id="employee-list">Danh sách nhân viên</p>
-          <button id="buttonadd" type="button">Thêm Nhân Viên</button>
-          </div>
-          <div class="finder">
-              <input type="text" id="findtext" placeholder="Tìm kiếm theo Mã, Tên hoặc Số điện thoại" onfocus="this.placeholder = ''"
-              onblur="this.placeholder = 'Tìm kiếm theo Mã, Tên hoặc Số điện thoại'">
-          </div>
-        <table class="table table-responsive w-100 d-block d-md-table">
-            <thead class="thead-inverse">
-                <tr>
-                    <th></th>
-                    <th>#</th>
-                    <th>Mã nhân viên</th>
-                    <th>Họ và tên</th>
-                    <th>Vị trí/Chức vụ</th>
-                    <th>Bộ phận/phòng ban</th>
-                </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td scope="row"><input type="checkbox"/></td>
-                        <td>1</td>
-                        <td>MF896</td>
-                        <td>Trần Đức Long</td>
-                        <td>Fresher</td>
-                        <td>Khối sản xuất</td>
-                        <tr>
-                            <td scope="row"><input type="checkbox"/></td>
-                            <td>1</td>
-                            <td>MF896</td>
-                            <td>Trần Đức Long</td>
-                            <td>Fresher</td>
-                            <td>Khối sản xuất</td>
-                        </tr>                    <tr>
-                            <td scope="row"><input type="checkbox"/></td>
-                            <td>1</td>
-                            <td>MF896</td>
-                            <td>Trần Đức Long</td>
-                            <td>Fresher</td>
-                            <td>Khối sản xuất</td>
-                        </tr>                    <tr>
-                            <td scope="row"><input type="checkbox"/></td>
-                            <td>1</td>
-                            <td>MF896</td>
-                            <td>Trần Đức Long</td>
-                            <td>Fresher</td>
-                            <td>Khối sản xuất</td>
-                        </tr>                    <tr>
-                            <td scope="row"><input type="checkbox"/></td>
-                            <td>1</td>
-                            <td>MF896</td>
-                            <td>Trần Đức Long</td>
-                            <td>Fresher</td>
-                            <td>Khối sản xuất</td>
-                        </tr>
-                </tbody>
-        </table>
-      </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="content.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<script>
+    $(function () {
+        $('#addform').load('addform.html');
+    });
+</script>
+<div class="content">
+    <div class="head-content">
+        <p id="employee-list">Danh sách nhân viên</p>
+        <button id="buttonadd" type="button"><img src="../Resource/Resource/icon/add.png" id="imgadd">Thêm Nhân
+            Viên</button>
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <div id="addform"></div>
+            </div>
+        </div>
+    </div>
+    <div class="finder">
+        <input type="text" id="findtext" placeholder="Tìm kiếm theo Mã, Tên hoặc Số điện thoại"
+            onfocus="this.placeholder = ''" onblur="this.placeholder = 'Tìm kiếm theo Mã, Tên hoặc Số điện thoại'">
+        <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Tất cả phòng ban
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <button type="button" class="dropdown-item">Phòng nhân sự</button>
+                <button type="button" class="dropdown-item">Phòng kinh doanh</button>
+                <button type="button" class="dropdown-item">Phòng nghiên cứu khoa học</button>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Tất cả vị trí
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <button type="button" class="dropdown-item">Phòng nhân sự</button>
+                <button type="button" class="dropdown-item">Phòng kinh doanh</button>
+                <button type="button" class="dropdown-item">Phòng nghiên cứu khoa học</button>
+            </div>
+        </div>
+        <button id="btnrefresh" type="button"><img id="refresh" src="../Resource/Resource/icon/refresh.png"></button>
+    </div>
+    <table class="table table-responsive w-100 d-block d-md-table">
+        <thead class="thead-inverse">
+            <tr>
+                <th>Mã nhân viên</th>
+                <th>Họ và tên</th>
+                <th>Giới tính</th>
+                <th>Ngày sinh</th>
+                <th>Điện thoại</th>
+                <th>Email</th>
+                <th>Chức vụ</th>
+                <th>Phòng ban</th>
+                <th>Mức lương cơ bản</th>
+                <th>Tình trạng công việc</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td scope="row">MF-896</td>
+                <td>Trần Đức Long</td>
+                <td>Nam</td>
+                <td>14/12/2000</td>
+                <td>0981392920</td>
+                <td>phongtranmv@gmail.com</td>
+                <td>Fresher</td>
+                <td>Khối sản xuất</td>
+                <td>3.000.000</td>
+                <td>Đang thử việc</td>
+            </tr>
+            <tr>
+                <td scope="row">MF-896</td>
+                <td>Trần Đức Long</td>
+                <td>Nam</td>
+                <td>14/12/2000</td>
+                <td>0981392920</td>
+                <td>phongtranmv@gmail.com</td>
+                <td>Fresher</td>
+                <td>Khối sản xuất</td>
+                <td>3.000.000</td>
+                <td>Đang thử việc</td>
+            </tr>
+            <tr>
+                <td scope="row">MF-896</td>
+                <td>Trần Đức Long</td>
+                <td>Nam</td>
+                <td>14/12/2000</td>
+                <td>0981392920</td>
+                <td>phongtranmv@gmail.com</td>
+                <td>Fresher</td>
+                <td>Khối sản xuất</td>
+                <td>3.000.000</td>
+                <td>Đang thử việc</td>
+            </tr>
+            <tr>
+                <td scope="row">MF-896</td>
+                <td>Trần Đức Long</td>
+                <td>Nam</td>
+                <td>14/12/2000</td>
+                <td>0981392920</td>
+                <td>phongtranmv@gmail.com</td>
+                <td>Fresher</td>
+                <td>Khối sản xuất</td>
+                <td>3.000.000</td>
+                <td>Đang thử việc</td>
+            </tr>
+            <tr>
+                <td scope="row">MF-896</td>
+                <td>Trần Đức Long</td>
+                <td>Nam</td>
+                <td>14/12/2000</td>
+                <td>0981392920</td>
+                <td>phongtranmv@gmail.com</td>
+                <td>Fresher</td>
+                <td>Khối sản xuất</td>
+                <td>3.000.000</td>
+                <td>Đang thử việc</td>
+            </tr>
+            <tr>
+                <td scope="row">MF-896</td>
+                <td>Trần Đức Long</td>
+                <td>Nam</td>
+                <td>14/12/2000</td>
+                <td>0981392920</td>
+                <td>phongtranmv@gmail.com</td>
+                <td>Fresher</td>
+                <td>Khối sản xuất</td>
+                <td>3.000.000</td>
+                <td>Đang thử việc</td>
+            </tr>
+            <tr>
+                <td scope="row">MF-896</td>
+                <td>Trần Đức Long</td>
+                <td>Nam</td>
+                <td>14/12/2000</td>
+                <td>0981392920</td>
+                <td>phongtranmv@gmail.com</td>
+                <td>Fresher</td>
+                <td>Khối sản xuất</td>
+                <td>3.000.000</td>
+                <td>Đang thử việc</td>
+            </tr>
+            <tr>
+                <td scope="row">MF-896</td>
+                <td>Trần Đức Long</td>
+                <td>Nam</td>
+                <td>14/12/2000</td>
+                <td>0981392920</td>
+                <td>phongtranmv@gmail.com</td>
+                <td>Fresher</td>
+                <td>Khối sản xuất</td>
+                <td>3.000.000</td>
+                <td>Đang thử việc</td>
+            </tr>
+            <tr>
+                <td scope="row">MF-896</td>
+                <td>Trần Đức Long</td>
+                <td>Nam</td>
+                <td>14/12/2000</td>
+                <td>0981392920</td>
+                <td>phongtranmv@gmail.com</td>
+                <td>Fresher</td>
+                <td>Khối sản xuất</td>
+                <td>3.000.000</td>
+                <td>Đang thử việc</td>
+            </tr>
+            <tr>
+                <td scope="row">MF-896</td>
+                <td>Trần Đức Long</td>
+                <td>Nam</td>
+                <td>14/12/2000</td>
+                <td>0981392920</td>
+                <td>phongtranmv@gmail.com</td>
+                <td>Fresher</td>
+                <td>Khối sản xuất</td>
+                <td>3.000.000</td>
+                <td>Đang thử việc</td>
+            </tr>
+
+            <tr>
+                <td scope="row">MF-896</td>
+                <td>Trần Đức Long</td>
+                <td>Nam</td>
+                <td>14/12/2000</td>
+                <td>0981392920</td>
+                <td>phongtranmv@gmail.com</td>
+                <td>Fresher</td>
+                <td>Khối sản xuất</td>
+                <td>3.000.000</td>
+                <td>Đang thử việc</td>
+            </tr>
+            <tr>
+                <td scope="row">MF-896</td>
+                <td>Trần Đức Long</td>
+                <td>Nam</td>
+                <td>14/12/2000</td>
+                <td>0981392920</td>
+                <td>phongtranmv@gmail.com</td>
+                <td>Fresher</td>
+                <td>Khối sản xuất</td>
+                <td>3.000.000</td>
+                <td>Đang thử việc</td>
+            </tr>
+            <tr>
+                <td scope="row">MF-896</td>
+                <td>Trần Đức Long</td>
+                <td>Nam</td>
+                <td>14/12/2000</td>
+                <td>0981392920</td>
+                <td>phongtranmv@gmail.com</td>
+                <td>Fresher</td>
+                <td>Khối sản xuất</td>
+                <td>3.000.000</td>
+                <td>Đang thử việc</td>
+            </tr>
+        </tbody>
+    </table>
+    <div class="pagination">
+        <ul id="listpage" style="list-style-type: none;">
+            <li class="list-page"><img src="../Resource/Resource/icon/btn-firstpage.svg" alt="firstpage"></li>
+            <li class="list-page"><img src="../Resource/Resource/icon/btn-prev-page.svg" alt="prevpage"></li>
+            <li class="list-page"><a class="page-link" href="#">1</a></li>
+            <li class="list-page"><a class="page-link" href="#">2</a></li>
+            <li class="list-page"><a class="page-link" href="#">3</a></li>
+            <li class="list-page"><a class="page-link" href="#">4</a></li>
+            <li class="list-page"><img src="../Resource/Resource/icon/btn-next-page.svg" alt="firstpage"></li>
+            <li class="list-page"><img src="../Resource/Resource/icon/btn-lastpage.svg" alt="prevpage"></li>
+
+        </ul>
+
+    </div>
+</div>
+<script>
+    var modal = document.getElementById("myModal");
+    var btn = document.getElementById("buttonadd");
+
+    var span = document.getElementsByClassName("close")[0];
+
+    btn.onclick = function () {
+        modal.style.display = "block";
+    }
+
+    span.onclick = function () {
+        modal.style.display = "none";
+    }
+
+    window.onclick = function (event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+    }
+</script>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
