--- a/html/index.html
+++ b/html/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="index.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -11,6 +11,7 @@
             $('#header').load('header.html');
             $('#navbar').load('navbar.html');
             $('#content').load('content.html');
+            $('#addform').load('addform.html');
         });
     </script>
     <title>ProJect Web</title>
@@ -18,9 +19,9 @@
 
 <body>
     <div id="header"></div>
-    <div class="main-content" style="display: flex;">
+    <div class="main-content" style="display: flex; height: 100%;">
         <div id="navbar"></div>
-        <div id="content" style="width: 100%; height: 100%;"></div>
+        <div id="content" style="width: 100%;"></div>
     </div>
 </body>
 
