--- a/html/content.html
+++ b/html/content.html
@@ -45,6 +45,7 @@
         </div>
         <button id="btnrefresh" type="button"><img id="refresh" src="../Resource/Resource/icon/refresh.png"></button>
     </div>
+    <div id="tablecontainer">
     <table class="table table-responsive w-100 d-block d-md-table">
         <thead class="thead-inverse">
             <tr>
@@ -220,6 +221,7 @@
             </tr>
         </tbody>
     </table>
+</div>
     <div class="pagination">
         <ul id="listpage" style="list-style-type: none;">
             <li class="list-page"><img src="../Resource/Resource/icon/btn-firstpage.svg" alt="firstpage"></li>
