--- a/html/addform.html
+++ b/html/addform.html
@@ -132,10 +132,11 @@
             <p id="employeecode">Mức lương cơ bản</p>
         </div>
         <div class="codeandname">
-            <input id="salary" class="textfield" type="text" required maxlength="10"
-                style="width: 300px; margin-right: 20px;" placeholder="Mức lương cơ bản" onfocus="this.placeholder = ''"
-                onblur="this.placeholder = 'Mức lương cơ bản'" oninput="salary()">
-                <span id="VND">(VNĐ)</span>
+            <input id="salary" class="textfield" type="text" required style="width: 300px; margin-right: 20px;"
+                placeholder="Mức lương cơ bản" onfocus="this.placeholder = ''"
+                onblur="this.placeholder = 'Mức lương cơ bản'" oninput="salary()"
+                onkeypress="return isNumberKey(event)">
+            <span id="VND">(VNĐ)</span>
         </div>
         <div class="titleemployee">
             <p id="employeecode">Tình trạng công việc</p>
@@ -151,15 +152,15 @@
 </div>
 </div>
 <script>
+
     function salary() {
-        var x = document.getElementById('salary');
+        let x = document.getElementById('salary');
         const numberFormat = new Intl.NumberFormat('vi-VN'
         );
         x.value = numberFormat.format(x.value.replaceAll(".", ""));
         if (x.value == '0') {
             x.value = '';
         }
-
     }
     function isNumberKey(evt) {
         var charCode = (evt.which) ? evt.which : evt.keyCode
